--- a/ansible/prometheus/tasks/main.yml
+++ b/ansible/prometheus/tasks/main.yml
@@ -57,3 +57,10 @@
     name: prometheus
     state: started
     enabled: yes
+  retries: 2
+  delay: 10
+  register: result
+  until: result is succeeded
+
+
+# End of project
